# depth_plane_est

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  get_planes.py  mask_to_hsv.py  orientation_correction.py  package.xml  process_depth.py
benchmark/: get_ahc_pcd.cpp  get_organised_pcd.cpp
cpp/all_normal/: all_normal.yaml  cluster_normal.cpp  find_planes.cpp
cpp/benchmark/: get_ahc_pcd.cpp  get_organised_pcd.cpp
cpp/gravity_normal/: avg_imu.cpp  find_planes.cpp  gravity_normal.yaml
cpp/utils/: correct_vector.cpp  data_conversion.cpp  find_peaks.cpp  math_utils.cpp  normal.cpp  visualise.cpp
depreciated/all_normal/: information_optimisation.py  see_laplace.py  test.py  test_cluster.py  test_depth.py  test_odom.py  test_odom_v2.py
depreciated/all_normal/Metric3D/: run_metric3d.py
depreciated/all_normal/depth_mapping/: inverse_linear_rescale.py  linear_rescale.py  main.py
depreciated/all_normal/utils/: get_mask.py  get_normal.py  get_planes.py  gravity_correction.py  metric3d.py  scaled_rigid_transform.py  test_depth.py
docker/: Dockerfile
launch/: all_normal.launch  benchmark_ahc.launch  benchmark_organised.launch  gravity_normal.launch
python/: check_accuracy.py  get_planes.py  linear_rescale.py  post_process.py  pyproject.toml  remap.py  requirements.txt  run_depthanythingv2.py  run_metric3d.py
python/depth_plane_est/: get_planes.py  process_depth.py  projected_convex_hull.py  save_pcd.py
python/depth_plane_est/test/: test_depth.py
test/: test_depth.py
